--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-updated_html_with_years = """\
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -161,6 +160,31 @@ updated_html_with_years = """\
       <div class="section-title">Recent GitHub Activity</div>
       <div class="bar-container">
         <div class="bar">
+          <div style="height: 20px;"></div>
+          <div style="height: 30px;"></div>
+          <div style="height: 50px;"></div>
+          <div style="height: 70px;"></div>
+          <div style="height: 85px;"></div>
+          <div style="height: 95px;"></div>
+          <div style="height: 60px;"></div>
+          <div style="height: 40px;"></div>
+          <div style="height: 55px;"></div>
+          <div style="height: 35px;"></div>
+          <div style="height: 65px;"></div>
+          <div style="height: 55px;"></div>
+          <div style="height: 78px;"></div>
+          <div style="height: 88px;"></div>
+          <div style="height: 95px;"></div>
+          <div style="height: 80px;"></div>
+          <div style="height: 70px;"></div>
+          <div style="height: 60px;"></div>
+          <div style="height: 50px;"></div>
+          <div style="height: 40px;"></div>
+          <div style="height: 30px;"></div>
+          <div style="height: 20px;"></div>
+          <div style="height: 25px;"></div>
+          <div style="height: 10px;"></div>
+
           <div style="height: 15px;"></div>
           <div style="height: 25px;"></div>
           <div style="height: 45px;"></div>
@@ -179,6 +203,15 @@ updated_html_with_years = """\
           <div style="height: 45px;"></div>
         </div>
         <div class="bar-label">
+          <span>2021</span><span>2022</span><span>2023</span><span>2024</span><span>2025</span>
+    </div>
+    <div class="section-title">Project Availability</div>
+    <ul>
+      <li>All GitHub projects listed here are <strong>publicly accessible</strong>.</li>
+      <li>Each repository includes <strong>live code</strong>, <strong>documentation</strong>, and sample data where applicable.</li>
+      <li>Forks were refactored to match clinical research needs, with added utility scripts or UI adjustments.</li>
+    </ul>
+    
           <span>2021</span><span>2022</span><span>2023</span><span>2024</span><span>2025</span>
         </div>
       </div>
@@ -202,5 +235,3 @@ updated_html_with_years = """\
 
 </body>
 </html>
-"""
-
