--- a/index.html
+++ b/index.html
@@ -158,53 +158,65 @@
       <a href="https://docs.github.com/en/pages/getting-started-with-github-pages" class="btn" target="_blank">Get My Own Profile</a>
 
       <div class="section-title">Recent GitHub Activity</div>
-      <div class="bar-container">
-        <div class="bar">
-          <div style="height: 20px;"></div>
-          <div style="height: 30px;"></div>
-          <div style="height: 50px;"></div>
-          <div style="height: 70px;"></div>
-          <div style="height: 85px;"></div>
-          <div style="height: 95px;"></div>
-          <div style="height: 60px;"></div>
-          <div style="height: 40px;"></div>
-          <div style="height: 55px;"></div>
-          <div style="height: 35px;"></div>
-          <div style="height: 65px;"></div>
-          <div style="height: 55px;"></div>
-          <div style="height: 78px;"></div>
-          <div style="height: 88px;"></div>
-          <div style="height: 95px;"></div>
-          <div style="height: 80px;"></div>
-          <div style="height: 70px;"></div>
-          <div style="height: 60px;"></div>
-          <div style="height: 50px;"></div>
-          <div style="height: 40px;"></div>
-          <div style="height: 30px;"></div>
-          <div style="height: 20px;"></div>
-          <div style="height: 25px;"></div>
-          <div style="height: 10px;"></div>
+<div class="bar-chart">
+  <div class="bar" style="height:10px;"></div>
+<div class="bar" style="height:15px;"></div>
+<div class="bar" style="height:20px;"></div>
+<div class="bar" style="height:25px;"></div>
+<div class="bar" style="height:30px;"></div>
+<div class="bar" style="height:20px;"></div>
+<div class="bar" style="height:15px;"></div>
+<div class="bar" style="height:25px;"></div>
+<div class="bar" style="height:35px;"></div>
+<div class="bar" style="height:30px;"></div>
+<div class="bar" style="height:25px;"></div>
+<div class="bar" style="height:20px;"></div>
+<div class="bar" style="height:40px;"></div>
+<div class="bar" style="height:45px;"></div>
+<div class="bar" style="height:50px;"></div>
+<div class="bar" style="height:48px;"></div>
+<div class="bar" style="height:30px;"></div>
+<div class="bar" style="height:20px;"></div>
+<div class="bar" style="height:25px;"></div>
+<div class="bar" style="height:35px;"></div>
+<div class="bar" style="height:40px;"></div>
+<div class="bar" style="height:50px;"></div>
+<div class="bar" style="height:45px;"></div>
+<div class="bar" style="height:35px;"></div>
+<div class="bar" style="height:55px;"></div>
+<div class="bar" style="height:60px;"></div>
+<div class="bar" style="height:65px;"></div>
+<div class="bar" style="height:70px;"></div>
+<div class="bar" style="height:68px;"></div>
+<div class="bar" style="height:30px;"></div>
+<div class="bar" style="height:25px;"></div>
+<div class="bar" style="height:35px;"></div>
+<div class="bar" style="height:50px;"></div>
+<div class="bar" style="height:65px;"></div>
+<div class="bar" style="height:60px;"></div>
+<div class="bar" style="height:55px;"></div>
+<div class="bar" style="height:70px;"></div>
+<div class="bar" style="height:65px;"></div>
+<div class="bar" style="height:60px;"></div>
+<div class="bar" style="height:55px;"></div>
+<div class="bar" style="height:40px;"></div>
+<div class="bar" style="height:10px;"></div>
+<div class="bar" style="height:0px;"></div>
+<div class="bar" style="height:5px;"></div>
+<div class="bar" style="height:10px;"></div>
+<div class="bar" style="height:20px;"></div>
+<div class="bar" style="height:40px;"></div>
+<div class="bar" style="height:50px;"></div>
+<div class="bar" style="height:45px;"></div>
+<div class="bar" style="height:50px;"></div>
+<div class="bar" style="height:48px;"></div>
+<div class="bar" style="height:35px;"></div>
+<div class="bar" style="height:30px;"></div>
 
-          <div style="height: 15px;"></div>
-          <div style="height: 25px;"></div>
-          <div style="height: 45px;"></div>
-          <div style="height: 65px;"></div>
-          <div style="height: 80px;"></div>
-          <div style="height: 95px;"></div>
-          <div style="height: 60px;"></div>
-          <div style="height: 40px;"></div>
-          <div style="height: 50px;"></div>
-          <div style="height: 30px;"></div>
-          <div style="height: 70px;"></div>
-          <div style="height: 55px;"></div>
-          <div style="height: 75px;"></div>
-          <div style="height: 88px;"></div>
-          <div style="height: 95px;"></div>
-          <div style="height: 45px;"></div>
-        </div>
-        <div class="bar-label">
-          <span>2021</span><span>2022</span><span>2023</span><span>2024</span><span>2025</span>
-    </div>
+</div>
+<div class="bar-label">
+  <span>2021</span><span>2022</span><span>2023</span><span>2024</span><span>2025</span>
+</div>
     <div class="section-title">Project Availability</div>
     <ul>
       <li>All GitHub projects listed here are <strong>publicly accessible</strong>.</li>
